feat(appointments): finished developing apis for the feat
